# cis5520-08-monads

./: .hlint.yaml  EitherMonad.hs  GenericMonads.hs  MaybePractice.hs  Monads.hs  cis5520-monads.cabal
